# OcrParser

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  environment.yml  ocr_parser_cli.py  pyproject.toml  requirements.txt  run_ocr_pdf_modular.sh  setup.py  start_agent_mvp.sh  start_layout_service.sh  start_mineru_server.sh  start_paddle_vllm_server.sh
.github/workflows/: ci.yml
configs/: ocr-agent-worker.env.example  ocr-platform-control.env.example
docs/: agpl-compliance.md  agpl-compliance.zh-CN.md  architecture.md  architecture.zh-CN.md  benchmarks.md  benchmarks.zh-CN.md  codex-production-deployment-guide.zh-CN.md  database-migrations.md  database-migrations.zh-CN.md  engine-certification-records.json  engine-certification.md  engine-certification.zh-CN.md  features.md  features.zh-CN.md  migration-v0.3.md  migration-v0.3.zh-CN.md  model-serving.md  model-serving.zh-CN.md  multi-engine-validation.md  ocr-agent-worker-service.md  ocr-platform-backup-restore.md  ocr-platform-backup-restore.zh-CN.md  ocr-platform-deployment.md  ocr-platform-deployment.zh-CN.md  ocr-platform-manifest-shard-architecture.md  ocr-platform-mvp-smoke.md  ocr-platform-purpose.md  ocr-platform-stability-observability.md  official-consistency-matrix.md  recovery-model.md  recovery-model.zh-CN.md  release-v0.2.md  release-v0.2.zh-CN.md  release-v0.3.1.md  release-v0.3.1.zh-CN.md  release-v0.3.md  release-v0.3.zh-CN.md  rfc-v0.4.md  rfc-v0.4.zh-CN.md  security-migration-v0.2.md  (+5 more)
dots_ocr/: s3_download_config.example.json  s3_upload_config.example.json
dots_ocr/data_index/: __init__.py  llm_processor.py  metadata_extractor.py  prompts.py  runner.py  utils.py
dots_ocr/model/: inference_async.py
dots_ocr/utils/: __init__.py  consts.py  format_transformer_v3.py  image_utils.py  layout_utils.py  s3_downloader.py  s3_upload.py
ocr_parser/: __init__.py  bootstrap.py  cli.py  components.py  config.py  engine_context.py  lifecycle.py  models.py  parser.py  runtime.py
ocr_parser/contracts/: __init__.py  document.py  engine.py  events.py  execution.py  failure.py  manifest.py
ocr_parser/domain/: algorithms.py  metadata.py  pdf_worker.py  prompts.py  qr.py  table_reparse.py
ocr_parser/engines/: __init__.py  api.py  base.py  dotsocr.py  native_openai.py  otsl2html.py  paddleocr_vl.py  registry.py  two_stage.py
ocr_parser/infra/: circuit_breaker.py  console.py  events.py  failure_category.py  metrics.py  monitoring.py  output_audit.py  resume.py  status_sidecar.py
ocr_parser/output/: __init__.py  assets.py  json_writer.py  markdown_writer.py  native_writer.py  rendering.py
ocr_parser/pipeline/: __init__.py  document_parser.py  postprocess.py
ocr_platform/: __init__.py  legal.py  optional.py
ocr_platform/agent/: __init__.py  __main__.py  client.py  (+7 more)
scripts/: ocr_agent_worker.sh
services/: ocr-agent-worker.logrotate.example  ocr-agent-worker.service.example  ocr-agent-worker@.service.example  ocr-platform-control.service.example
tests/: conftest.py  test_agent_command.py  test_agent_event_spool.py  test_agent_event_tail.py  test_agent_manifest_integrity.py  test_agent_resources.py  test_agent_runtime.py  test_agent_scan_lane.py  test_agent_static_shards.py  test_agent_stop_logic.py  test_agent_worker_service_files.py  test_cli_engine_config.py  test_cli_file_concurrency.py  test_cli_job_events.py  test_cli_manifest_inputs.py  test_control_api.py  test_control_database.py  test_control_entrypoint.py  test_control_manifest_api.py  test_control_recovery.py  test_control_recovery_config.py  test_control_ui_static.py  test_data_index_config.py  test_dependency_boundaries.py  test_deployment_docs.py  test_distributed_walkthrough_tool.py  test_document_native_artifacts.py  test_document_parser_event_hooks.py  test_dotsocr_engine_result.py  test_engine_config_file.py  test_engine_execution_contract.py  test_engine_fixture_outputs.py  test_engine_registry.py  test_execution_metrics.py  test_failure_category.py  test_local_prod_env.py  test_manifest_output_audit.py  test_manifest_scanner.py  test_manifest_sharder.py  test_markdown_writer.py  (+27 more)
tools/: apply_control_migrations.py  audit_manifest_outputs.py  check_docs_links.py  check_engine_certifications.py  check_engine_fixture_outputs.py  check_install_profile.py  check_installed_console_scripts.py  check_performance_regression.py  generate_benchmark_pdfs.py  install_production.py  local_prod_env.py  mock_ocr_service.py  pg_claim_stress.py  production_preflight.py  run_distributed_walkthrough.py  run_mock_e2e.py  run_ocr_benchmark.py  run_performance_baseline.py  run_stability_soak.py  verify_release_build.py
(+104 files in other folders)
