[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrparser-platform"
version = "0.3.0rc1"
description = "PDF OCR parser and optional distributed OCR control platform."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE", "third_party/licenses/*"]
authors = [
  {name = "OCR Parser contributors"}
]
keywords = ["ocr", "pdf", "markdown", "openai-compatible", "batch-processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "aiofiles",
  "httpx==0.28.1",
  "ImageHash==4.3.2",
  "json_repair==0.51.0",
  "numpy==2.1.2",
  "opencv-python==4.12.0.88",
  "openai==1.90.0",
  "pillow",
  "prometheus_client",
  "pydantic>=2.0.0,<3.0",
  "PyMuPDF==1.26.3",
  "PyYAML",
  "pyzbar==0.1.9",
  "requests==2.32.4",
  "tqdm==4.67.1"
]

[project.optional-dependencies]
platform = [
  "fastapi",
  "psycopg[binary]>=3.1,<4.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]"
]
s3 = [
  "aiohttp==3.12.15",
  "aiobotocore==2.13.0",
  "botocore>=1.34.0,<1.35.0",
  "idna"
]
layout = [
  "fastapi",
  "huggingface-hub>=0.25",
  "torch>=2.3",
  "torchvision>=0.18",
  "transformers>=4.50,<6.0",
  "uvicorn[standard]"
]
full = [
  "aiohttp==3.12.15",
  "aiobotocore==2.13.0",
  "botocore>=1.34.0,<1.35.0",
  "fastapi",
  "idna",
  "psycopg[binary]>=3.1,<4.0",
  "python-dotenv",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]"
]
dev = [
  "aiohttp==3.12.15",
  "aiobotocore==2.13.0",
  "botocore>=1.34.0,<1.35.0",
  "build",
  "fastapi",
  "idna",
  "psycopg[binary]>=3.1,<4.0",
  "python-dotenv",
  "pytest",
  "pytest-asyncio",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]"
]

[project.scripts]
ocr-parser = "ocr_parser.cli:main"
ocr-platform-control = "ocr_platform.control.__main__:main"
ocr-platform-agent = "ocr_platform.agent.__main__:main"
ocr-platform-migrate = "ocr_platform.control.migrate_cli:main"

[project.urls]
Homepage = "https://github.com/albaNnaksqr/OcrParser"
Issues = "https://github.com/albaNnaksqr/OcrParser/issues"

[tool.setuptools.packages.find]
include = ["ocr_parser*", "ocr_platform*", "dots_ocr*", "services*"]

[tool.setuptools.package-data]
"ocr_platform.control" = ["migrations/*.sql", "ui/*"]
"dots_ocr.data_index" = ["configs/*.json"]
